--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "supervisor ： 不用每次都重新启动",
   "main": "app.js",
   "dependencies": {
+    "express": "^4.17.1",
+    "glob": "^7.1.7",
     "log4js": "^6.3.0",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "mongodb": "^4.0.1",
+    "protocol-buffers": "^4.2.0"
   },
   "devDependencies": {
     "ejs": "^3.1.6"
