--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "glob": "^7.1.7",
+    "koa": "^2.13.1",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "log4js": "^6.3.0",
     "mkdirp": "^1.0.4",
     "mongodb": "^4.0.1",
